--- a/src/main/resources/com/creatingskies/game/config/company/Company.fxml
+++ b/src/main/resources/com/creatingskies/game/config/company/Company.fxml
@@ -1,22 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.creatingskies.game.config.company.CompanyController">
+<AnchorPane minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.creatingskies.game.config.company.CompanyController">
    <children>
       <HBox layoutX="413.0" layoutY="200.0" prefHeight="100.0" prefWidth="200.0" spacing="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
          <children>
             <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#handleAdd" text="Add Company" />
+                  <GridPane>
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="277.0" minWidth="10.0" prefWidth="262.0" />
+                      <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="195.0" minWidth="10.0" prefWidth="138.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <CheckBox fx:id="showArchives" mnemonicParsing="false" text="Show archives" GridPane.columnIndex="1" />
+                        <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+                           <children>
+                              <Button mnemonicParsing="false" onAction="#handleAdd" text="Add Company" />
+                              <Button fx:id="archiveButton" mnemonicParsing="false" onAction="#moveToArchive" text="Archive" visible="false" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </GridPane>
                   <TableView fx:id="companyTableView" minWidth="400.0" prefHeight="490.0" prefWidth="400.0">
                     <columns>
                       <TableColumn fx:id="companyNameTableColumn" prefWidth="75.0" text="Name" />
-                      <TableColumn fx:id="companyActionTableColumn" editable="false" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" sortable="false" />
+                      <TableColumn fx:id="companyActionTableColumn" editable="false" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" sortable="false" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -34,6 +58,7 @@
                   </AnchorPane>
                </content>
             </ScrollPane>
+            <HBox prefHeight="100.0" prefWidth="200.0" />
          </children>
       </HBox>
    </children>
