--- a/src/main/resources/com/creatingskies/game/core/GameCore.fxml
+++ b/src/main/resources/com/creatingskies/game/core/GameCore.fxml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="mainContainer" prefHeight="600.0" prefWidth="772.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.creatingskies.game.core.GameCoreController">
+<AnchorPane fx:id="mainContainer" prefHeight="600.0" prefWidth="772.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/8.0.71" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.creatingskies.game.core.GameCoreController">
 	<children>
       <Pane fx:id="pane" onMousePressed="#showMouseCursor" prefWidth="0.0" style="-fx-background-color: #000000;">
          <children>
@@ -32,6 +35,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -39,7 +43,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label style="-fx-font-weight: bold;" text="Obstacle Slow Factor" textFill="WHITE" visible="false" GridPane.rowIndex="7">
+            <Label style="-fx-font-weight: bold;" text="Obstacle Slow Factor" textFill="WHITE" visible="false" GridPane.rowIndex="8">
                <font>
                   <Font size="14.0" />
                </font>
@@ -54,27 +58,27 @@
 										<Font size="24.0" />
 									</font>
 								</Label>
-            <Label fx:id="obstacleSlowLabel" style="-fx-font-weight: bold;" text="0.0" textFill="WHITE" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="7">
+            <Label fx:id="obstacleSlowLabel" style="-fx-font-weight: bold;" text="0.0" textFill="WHITE" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="8">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <Label fx:id="tileSlowLabel" style="-fx-font-weight: bold;" text="0.0" textFill="WHITE" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="8">
+            <Label fx:id="tileSlowLabel" style="-fx-font-weight: bold;" text="0.0" textFill="WHITE" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="9">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <Label style="-fx-font-weight: bold;" text="Tile Slow Factor" textFill="WHITE" visible="false" GridPane.rowIndex="8">
+            <Label style="-fx-font-weight: bold;" text="Tile Slow Factor" textFill="WHITE" visible="false" GridPane.rowIndex="9">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label style="-fx-font-weight: bold;" text="Weather Slow Factor" textFill="WHITE" visible="false" GridPane.rowIndex="9">
+            <Label style="-fx-font-weight: bold;" text="Weather Slow Factor" textFill="WHITE" visible="false" GridPane.rowIndex="10">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label fx:id="weatherSlowLabel" style="-fx-font-weight: bold;" text="0.0" textFill="WHITE" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="9">
+            <Label fx:id="weatherSlowLabel" style="-fx-font-weight: bold;" text="0.0" textFill="WHITE" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="10">
                <font>
                   <Font size="24.0" />
                </font>
@@ -99,17 +103,17 @@
                   <Font size="24.0" />
                </font>
             </Label>
-            <Label prefHeight="20.0" prefWidth="93.0" style="-fx-font-weight: bold;" text="Vertical Tilt" textFill="WHITE" GridPane.rowIndex="4">
+            <Label prefHeight="20.0" prefWidth="93.0" style="-fx-font-weight: bold;" text="Vertical Tilt" textFill="WHITE" GridPane.rowIndex="5">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label prefHeight="20.0" prefWidth="123.0" style="-fx-font-weight: bold;" text="Horizontal Tilt" textFill="WHITE" GridPane.rowIndex="5">
+            <Label prefHeight="20.0" prefWidth="123.0" style="-fx-font-weight: bold;" text="Horizontal Tilt" textFill="WHITE" GridPane.rowIndex="6">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <ImageView fx:id="tiltUpImageView" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <ImageView fx:id="tiltUpImageView" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <image>
                   <Image url="@../../../../images/fa-arrow-up_64_0_ffffff_none.png" />
                </image>
@@ -117,7 +121,7 @@
                   <Insets right="40.0" />
                </GridPane.margin>
             </ImageView>
-            <ImageView fx:id="tiltDownImageView" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <ImageView fx:id="tiltDownImageView" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <image>
                   <Image url="@../../../../images/fa-arrow-down_64_0_ffffff_none.png" />
                </image>
@@ -125,7 +129,7 @@
                   <Insets right="40.0" />
                </GridPane.margin>
             </ImageView>
-            <ImageView fx:id="tiltLeftImageView" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="5">
+            <ImageView fx:id="tiltLeftImageView" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="6">
                <image>
                   <Image url="@../../../../images/fa-arrow-left_64_0_ffffff_none.png" />
                </image>
@@ -133,7 +137,7 @@
                   <Insets right="40.0" />
                </GridPane.margin>
             </ImageView>
-            <ImageView fx:id="tiltRightImageView" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="5">
+            <ImageView fx:id="tiltRightImageView" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="6">
                <image>
                   <Image url="@../../../../images/fa-arrow-right_64_0_ffffff_none.png" />
                </image>
@@ -141,12 +145,22 @@
                   <Insets right="40.0" />
                </GridPane.margin>
             </ImageView>
-            <Label fx:id="verticalTiltLevel" style="-fx-font-weight: bold;" text="0" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <Label fx:id="verticalTiltLevel" style="-fx-font-weight: bold;" text="0" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <Label fx:id="horizontalTiltLevel" style="-fx-font-weight: bold;" text="0" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="5">
+            <Label fx:id="horizontalTiltLevel" style="-fx-font-weight: bold;" text="0" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="6">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <Label prefHeight="20.0" prefWidth="123.0" style="-fx-font-weight: bold;" text="Difficulty" textFill="WHITE" GridPane.rowIndex="4">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="difficultyLevel" style="-fx-font-weight: bold;" text="0" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <font>
                   <Font size="24.0" />
                </font>
