--- a/src/main/resources/com/creatingskies/game/editor/Designer.fxml
+++ b/src/main/resources/com/creatingskies/game/editor/Designer.fxml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.image.*?>
-<?import java.net.*?>
-<?import javafx.geometry.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.creatingskies.game.editor.MapDesignerController">
+<AnchorPane minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.creatingskies.game.editor.MapDesignerController">
    <children>
       <HBox prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
          <children>
@@ -32,10 +35,14 @@
                      <content>
                         <FlowPane maxWidth="200.0">
                            <children>
-                              <HBox alignment="BOTTOM_LEFT" prefHeight="27.0" prefWidth="209.0">
+                              <HBox alignment="BOTTOM_LEFT" prefHeight="27.0" prefWidth="209.0" spacing="10.0">
                                  <children>
-                                    <Label text="Tile" textFill="#8d8d8d" />
+                                    <Label text="Tiles" textFill="#8d8d8d" />
+                                    <Button fx:id="moveToArchiveButton" alignment="CENTER" mnemonicParsing="false" onAction="#moveToArchive" styleClass="button-default" text="Move To Archive" visible="false" />
                                  </children>
+                                 <FlowPane.margin>
+                                    <Insets bottom="10.0" />
+                                 </FlowPane.margin>
                               </HBox>
                               <FlowPane fx:id="tileImageSelections" hgap="5.0" maxWidth="200.0" minHeight="50.0" vgap="5.0" />
                               <HBox alignment="BOTTOM_LEFT" prefHeight="27.0" prefWidth="209.0">
