--- a/src/main/resources/com/creatingskies/game/editor/Designer.fxml
+++ b/src/main/resources/com/creatingskies/game/editor/Designer.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.creatingskies.game.editor.MapDesignerController">
+<AnchorPane minHeight="768.0" minWidth="1024.0" prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.creatingskies.game.editor.MapDesignerController">
    <children>
       <HBox prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
          <children>
@@ -31,14 +31,13 @@
                      </font>
                   </Label>
                   <ImageView fx:id="selectedTileImageView" fitHeight="100.0" fitWidth="100.0" layoutX="165.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
-                  <ScrollPane hbarPolicy="NEVER" layoutX="36.0" layoutY="67.0" maxWidth="200.0" AnchorPane.bottomAnchor="55.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="250.0">
+                  <ScrollPane hbarPolicy="NEVER" layoutX="36.0" layoutY="287.0" maxWidth="230.0" prefHeight="406.0" prefWidth="230.0" AnchorPane.bottomAnchor="55.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="287.0">
                      <content>
                         <FlowPane maxWidth="200.0">
                            <children>
                               <HBox alignment="BOTTOM_LEFT" prefHeight="27.0" prefWidth="209.0" spacing="10.0">
                                  <children>
                                     <Label text="Tiles" textFill="#8d8d8d" />
-                                    <Button fx:id="moveToArchiveButton" alignment="CENTER" mnemonicParsing="false" onAction="#moveToArchive" styleClass="button-default" text="Move To Archive" visible="false" />
                                  </children>
                                  <FlowPane.margin>
                                     <Insets bottom="10.0" />
@@ -66,6 +65,8 @@
                      </content>
                   </ScrollPane>
                   <Label fx:id="selectedTileDescription" layoutX="119.0" layoutY="117.0" text="Description" textFill="#8d8d8d" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="120.0" />
+                  <Button fx:id="viewArchivesButton" layoutX="10.0" layoutY="253.0" mnemonicParsing="false" onAction="#viewArchives" text="Archives" />
+                  <Button fx:id="moveToArchiveButton" alignment="CENTER" layoutX="96.0" layoutY="253.0" mnemonicParsing="false" onAction="#moveToArchive" styleClass="button-default" text="Move To Archive" visible="false" />
                </children>
             </AnchorPane>
           <AnchorPane fx:id="mapContainer" HBox.hgrow="ALWAYS">
