--- a/src/main/resources/com/creatingskies/game/config/weather/WeatherProperties.fxml
+++ b/src/main/resources/com/creatingskies/game/config/weather/WeatherProperties.fxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="550.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.creatingskies.game.config.weather.WeatherPropertiesController">
+<AnchorPane prefHeight="550.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.71" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.creatingskies.game.config.weather.WeatherPropertiesController">
    <children>
       <VBox alignment="CENTER" layoutX="104.0" layoutY="56.0" prefHeight="550.0" prefWidth="500.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -28,7 +30,7 @@
             <HBox alignment="CENTER_LEFT" layoutX="35.0" layoutY="235.0" maxHeight="50.0" maxWidth="450.0" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
                <children>
                   <Label minWidth="100.0" text="Difficulty" />
-                  <Slider fx:id="difficultySlider" majorTickUnit="1.0" max="7.0" minorTickCount="0" prefHeight="14.0" prefWidth="375.0" showTickLabels="true" snapToTicks="true" />
+                  <Slider fx:id="difficultySlider" majorTickUnit="1.0" max="3.0" minorTickCount="0" prefHeight="14.0" prefWidth="375.0" showTickLabels="true" snapToTicks="true" />
                </children>
             </HBox>
             <HBox alignment="CENTER_LEFT" layoutX="35.0" layoutY="260.0" maxHeight="50.0" maxWidth="450.0" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
