--- a/src/main/resources/com/creatingskies/game/debugging/Debugging.fxml
+++ b/src/main/resources/com/creatingskies/game/debugging/Debugging.fxml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.paint.RadialGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.shape.Circle?>
 
-<AnchorPane id="loginContainer" maxHeight="350.0" maxWidth="500.0" minHeight="200.0" minWidth="500.0" prefHeight="350.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.creatingskies.game.debugging.DeviceDebuggingController">
+<AnchorPane id="loginContainer" maxHeight="400.0" maxWidth="500.0" minHeight="400.0" minWidth="500.0" prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.71" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.creatingskies.game.debugging.DeviceDebuggingController">
    <children>
       <Button defaultButton="true" layoutX="277.0" layoutY="144.0" minWidth="100.0" mnemonicParsing="false" onAction="#testDisplayTiltValues" styleClass="button-primary" text="Debug" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="25.0" />
-      <Slider fx:id="horizontalSlider" blockIncrement="1.0" layoutX="25.0" layoutY="182.0" majorTickUnit="1.0" max="7.0" min="-7.0" minorTickCount="0" prefHeight="14.0" prefWidth="436.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" />
-      <Slider fx:id="verticalSlider" blockIncrement="1.0" layoutX="25.0" layoutY="65.0" majorTickUnit="1.0" max="7.0" min="-7.0" minorTickCount="0" prefHeight="14.0" prefWidth="436.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" />
+      <Slider fx:id="horizontalSlider" blockIncrement="1.0" layoutX="25.0" layoutY="182.0" majorTickUnit="1.0" max="3.0" min="-3.0" minorTickCount="0" prefHeight="14.0" prefWidth="436.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="260.0" />
+      <Slider fx:id="verticalSlider" blockIncrement="1.0" layoutX="25.0" layoutY="65.0" majorTickUnit="1.0" max="3.0" min="-3.0" minorTickCount="0" prefHeight="14.0" prefWidth="436.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="160.0" />
       <HBox layoutX="256.0" layoutY="303.0" prefHeight="17.0" prefWidth="200.0" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="25.0">
          <children>
             <Circle fx:id="c1" radius="10.0" stroke="#b22b2b" strokeType="INSIDE" strokeWidth="0.5">
@@ -119,12 +120,14 @@
             </Circle>
          </children>
       </HBox>
-      <Label layoutX="275.0" layoutY="274.0" text="Expected Output" />
-      <Label layoutX="25.0" layoutY="32.0" text="Backward" textFill="#d0d0d0" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="35.0" />
-      <Label layoutX="407.0" layoutY="40.0" text="Forward" textFill="#d0d0d0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="35.0" />
-      <Label layoutX="25.0" layoutY="149.0" text="Left" textFill="#d0d0d0" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="150.0" />
-      <Label layoutX="448.0" layoutY="149.0" text="Right" textFill="#d0d0d0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="150.0" />
-      <Label layoutX="231.0" layoutY="35.0" text="Vertical" />
-      <Label layoutX="223.0" layoutY="150.0" text="Horizontal" />
+      <Label layoutX="275.0" layoutY="274.0" text="Expected Output" AnchorPane.bottomAnchor="60.0" />
+      <Label layoutX="25.0" layoutY="32.0" text="Backward" textFill="#d0d0d0" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="130.0" />
+      <Label layoutX="407.0" layoutY="40.0" text="Forward" textFill="#d0d0d0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="130.0" />
+      <Label layoutX="25.0" layoutY="149.0" text="Left" textFill="#d0d0d0" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="230.0" />
+      <Label layoutX="448.0" layoutY="149.0" text="Right" textFill="#d0d0d0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="230.0" />
+      <Label layoutX="231.0" layoutY="35.0" text="Vertical" AnchorPane.topAnchor="130.0" />
+      <Label layoutX="223.0" layoutY="150.0" text="Horizontal" AnchorPane.topAnchor="230.0" />
+      <Slider fx:id="difficultySlider" blockIncrement="1.0" layoutX="35.0" layoutY="75.0" majorTickUnit="1.0" max="3.0" minorTickCount="0" prefHeight="14.0" prefWidth="436.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" AnchorPane.topAnchor="60.0" />
+      <Label layoutX="227.0" layoutY="28.0" text="Difficulty" AnchorPane.topAnchor="30.0" />
    </children>
 </AnchorPane>
